Bug 117478 - xml:base support is missing
Summary: xml:base support is missing
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: feed parser (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: triaged
: 140094 149499 (view as bug list)
Depends on:
Blocks:
 
Reported: 2005-12-02 01:24 UTC by Matej Cepl
Modified: 2013-07-05 10:59 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.0
Sentry Crash Report:


Attachments
email from Tim Bray about problem with xml:base (4.39 KB, message/rfc822)
2005-12-02 01:25 UTC, Matej Cepl
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matej Cepl 2005-12-02 01:24:50 UTC
Version:           1.1.3 (using KDE 3.4.2, Debian Package 4:3.4.2-4 (testing/unstable))
Compiler:          Target: i486-linux-gnu
OS:                Linux (i686) release 2.6.13.3

When reading Tim Bray's Ongoing blog (http://www.tbray.org/ongoing/) through akregator with Atom feed (http://www.tbray.org//ongoing/ongoing.atom; be aware, that he is one of the chairs of Atom commitee, so I guess that his feed should be OK :-)) I cannot get to any link coming from the article in akregator window. When writing him about this, his response (see attached) was that he uses xml:base (http://www.w3.org/TR/xmlbase/), which has pretty bad coverage. Would it be possible for akregator to support it (it should be reasonably simple IMHO, does konqueror support <base> element of old HTML)?

Thanks a lot,

Matej
Comment 1 Matej Cepl 2005-12-02 01:25:48 UTC
Created attachment 13730 [details]
email from Tim Bray about problem with xml:base
Comment 2 Frank Osterfeld 2006-01-17 16:38:07 UTC
Confirmed. Let me check if I can hack xml:base support into the 3.5 branch, otherwise we have to wait for it until KDE4 (which will have a new shiny RSS/Atom parser)
Comment 3 Frank Osterfeld 2007-01-27 21:44:36 UTC
*** Bug 140094 has been marked as a duplicate of this bug. ***
Comment 4 Frank Osterfeld 2008-10-27 22:29:26 UTC
*** Bug 149499 has been marked as a duplicate of this bug. ***
Comment 5 Dominik Tritscher 2008-11-09 12:05:55 UTC
This problem still exists in Akregator 1.3.3
Comment 6 Eric Johnson 2010-02-01 23:51:21 UTC
I can report that this bug *still* occurs in Akregator 1.5.3 with KDE 4.3.3
Comment 7 Aurelien Gateau 2013-07-05 10:59:06 UTC
Git commit 4e63a1ce98ff589be61c46796990c20d9ae7eca2 by Aurélien Gâteau.
Committed on 28/06/2013 at 14:29.
Pushed by gateau into branch 'master'.

akregator: Support nested xml:base attributes

Feed from tbray.org has such nested xml:base attributes. Added it to the
test suite.

The change also slightly changes the output of bug-190068.xml.
FIXED-IN: 4.11.0
REVIEW: 111288

M  +22   -3    syndication/elementwrapper.cpp
M  +4    -4    syndication/tests/atom/bug-190068.xml.expected
A  +45   -0    syndication/tests/atom/tbray.org_nested_xmlbase.xml
A  +48   -0    syndication/tests/atom/tbray.org_nested_xmlbase.xml.expected

http://commits.kde.org/kdepimlibs/4e63a1ce98ff589be61c46796990c20d9ae7eca2