akregator: Support nested xml:base attributes

Feed from tbray.org has such nested xml:base attributes. Added it to the
test suite.

The change also slightly changes the output of bug-190068.xml.

BUG: 117478
FIXED-IN: 4.11.0
REVIEW: 111288